feat new endpoint for user playlists
